testsuite/tests/codeGen/should_compile/T18614.hs
{-# LANGUAGE MagicHash, UnboxedTuples #-}
{-# OPTIONS_GHC -O #-}

module Main where

import GHC.Exts

main = pure ()

test :: Word8# -> Word8#
test x = x `plusWord8#` narrowWord8# 1##
